[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/font1.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Spr_lifes.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/AsteroidPosition.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/PlayerSurvive2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Lifes.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Asteroid.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/GameplayMusic.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
font_data = ExtResource( 1 )

[node name="Lifes2" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="PlayerSurvive" parent="." instance=ExtResource( 6 )]
position = Vector2( 20, 84 )

[node name="AnimatedSprite" parent="PlayerSurvive" index="0"]
frame = 1

[node name="AsteroidPosition" parent="." instance=ExtResource( 5 )]

[node name="AsteroidSpawn" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Lifes_canvas" type="CanvasLayer" parent="." groups=[
"lifeshud",
]]

[node name="Lifes" parent="Lifes_canvas" groups=[
"lifeshud",
] instance=ExtResource( 4 )]

[node name="Asteroid" parent="." instance=ExtResource( 8 )]

[node name="SurviveTimer" type="Timer" parent="."]

[node name="TimerLabel" type="Label" parent="." groups=[
"timer",
]]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 140.0
margin_top = 159.0
margin_right = 180.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinTimer" type="Timer" parent="."]
wait_time = 180.0
one_shot = true

[node name="GameplayMusic" parent="." instance=ExtResource( 9 )]
[connection signal="area_entered" from="PlayerSurvive" to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="AsteroidSpawn" to="." method="_on_AsteroidSpawn_timeout"]
[connection signal="timeout" from="SurviveTimer" to="." method="_on_SurviveTimer_timeout"]
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]

[editable path="PlayerSurvive"]

[editable path="HUD"]
